The client can respond to parameters request sent by the server